🛠️ chore : Add CORS support and update npm scripts for development and production

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A comprehensive MERN-based authentication system featuring email verification, password recovery, and welcome emails for a secure and user-friendly experience.",
   "main": "backend/index.js",
   "scripts": {
-    "dev": "nodemon backend/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development nodemon backend/index.js",
+    "start": "NODE_ENV=production node backend/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
